# lemmy-ui-leptos

./: .gitignore  .leptosfmt.toml  .rustfmt.toml  Cargo.toml  README.md  Trunk.css  Trunk.html  Trunk.toml  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.css
.gitea/workflows/: deploy.yaml
.github/workflows/: home_server.yml  tauri_apps.yml  tauri_build.yml
.zed/: settings.json
locales/: en.json  fr.json
new/: Trunk.css  Trunk.html  Trunk.toml
src/: config.rs  cookie.rs  errors.rs  host.rs  indexed_db.rs  layout.rs  lemmy_client.rs  lemmy_error.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: capabilities.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/ui/components/: mod.rs
src/ui/components/comment/: comment_node.rs  comment_nodes.rs
src/ui/components/common/: about.rs  icon.rs  mod.rs  nav.rs  text_input.rs
src/ui/components/communities/: communities_activity.rs
src/ui/components/home/: home_activity.rs  site_summary.rs  test.rs  trending.rs
src/ui/components/login/: login_activity.rs  login_form.rs
src/ui/components/notifications/: mod.rs  notifications_activity.rs
src/ui/components/post/: post_activity.rs  post_listing.rs  post_listings.rs
