[package]
name = "lemmy-ui-leptos"
version = "0.19.3-lw-demo-alpha"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# recommended - use the latest version tag and test against an instance that supports the same version
# lemmy_api_common = { tag = "0.19.5", git = "https://github.com/LemmyNet/lemmy.git", default-features = false }

# test against unstable main dev branch of Lemmy
# lemmy_api_common = { branch = "main", git = "https://github.com/LemmyNet/lemmy.git", default-features = false }

# for testing potential lemmy changes
# lemmy_api_common = { path = "../lemmy/crates/api_common", default-features = false }
lemmy_api_common = { branch = "deploy_demo", git = "https://github.com/jim-taylor-business/lemmy.git", default-features = false }
lemmy_api_common_latest = { tag = "0.19.5", git = "https://github.com/jim-taylor-business/lemmy.git", default-features = false, package = "lemmy_api_common" }

leptos = "0"
leptos_actix = { version = "0", optional = true }
leptos_meta = "0"
leptos_router = "0"

leptos_i18n = "0"
leptos-use = { version = "0", optional = true }
codee = "0"

serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0"
serde_json = "1"
cfg-if = "1"
strum = "0"
strum_macros = "0"
web-sys = { version = "0", features = ["AbortController"] }

pulldown-cmark = { branch = "deploy_demo", git = "https://github.com/jim-taylor-business/pulldown-cmark.git" }

html-escape = "0"
pretty-duration = "0"

rexie = { version = "0", optional = true }
serde-wasm-bindgen = { version = "0", optional = true }

# dependencies for csr or hydrate features
wasm-cookies = { version = "0", optional = true }
gloo-net = { version = "0", optional = true, features = ["http"] }
# chrono = { version = "0", optional = true }
chrono = "0"
# required for better debug messages
# specific version required for leptos wasm compatibility
wasm-bindgen = { version = "=0.2.93", optional = true }
console_error_panic_hook = { version = "0", optional = true }

# dependencies for ssr feature
actix-files = { version = "0", optional = true }
actix-web = { version = "4", features = ["macros"], optional = true }
actix-proxy = { version = "0", optional = true }
actix-http = { version = "3", optional = true }
awc = { version = "3", optional = true }

[package.metadata.cargo-machete]
# strum required for error handling, actix-proxy for awc SSL
ignored = ["strum", "actix-proxy"]

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]

[features]
default = ["ssr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "leptos_i18n/hydrate",
  "leptos-use",
  "dep:wasm-bindgen",
  "dep:wasm-cookies",
  "dep:console_error_panic_hook",
  "dep:gloo-net",
  # "dep:chrono",
  "rexie",
  "serde-wasm-bindgen",
]
csr = [
  "leptos/csr",
  "leptos_meta/csr",
  "leptos_router/csr",
  "leptos_i18n/csr",
  "leptos-use",
  "dep:wasm-bindgen",
  "dep:wasm-cookies",
  "dep:console_error_panic_hook",
  "dep:gloo-net",
  # "dep:chrono",
  "rexie",
  "serde-wasm-bindgen",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos_i18n/actix",
  "leptos-use/actix",
  "leptos-use/ssr",
  "leptos_actix",
  "dep:actix-http",
  "dep:actix-web",
  "dep:actix-files",
  "dep:actix-proxy",
  "dep:awc",
]

[package.metadata.cargo-all-features]
denylist = ["actix-files", "actix-web", "leptos_actix"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[profile.release]
codegen-units = 1
lto = true

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1

[package.metadata.leptos]
output-name = "lemmy-ui-leptos"
env = "DEV"
watch = false

bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

tailwind-input-file = "tailwind.css"
browserquery = "defaults"

site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "0.0.0.0:1237"
reload-port = 3001

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
