[package]
name = "tech_demo_lemmy_world"
version = "0.19.3-lw-demo-alpha"
description = "Tech Demo Lemmy.World"
authors = ["jimmy90"]
edition = "2021"

[lib]
name="tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

